# examples-devil

./: .gitignore  README.md  REFERENCES.md
LoadPNG/: README.md
LoadPNG/LoadPNG/: main.cpp
LoadPNG/LoadPNG.xcodeproj/: project.pbxproj
LoadPNG/LoadPNG.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
LoadPNG/LoadPNG.xcodeproj/xcshareddata/xcschemes/: LoadPNG.xcscheme
circle-animation-gif/: .gitignore  README.md  main.cc  run.sh
cmake-release/: .gitignore  CMakeLists.txt  main.cc
devil/: INSTALL.macOS.md
devil/1.8.0_1/lib/: libIL.dylib  libILU.dylib  libILUT.dylib
devil/1.8.0_1/relink/: libIL.dylib  libILU.dylib  libILUT.dylib  libjasper.4.dylib  libjpeg.9.dylib  liblcms2.2.dylib  libpng16.16.dylib  libtiff.5.dylib  patch.sh
devil/unknown/lib/: libIL.dylib  libILU.dylib
draw-circle/: README.md  REFERENCES.md  main.cc
draw-colors/: main.cc  run.sh
load-save/: main.cpp  rect.txt  run.sh
simple-load/: main.cpp  run.sh
type-from-ext/: UtilsDevIL.hpp
